[workspace]
members = ["crates/gitbutler-*", "crates/but-*", "crates/tauri-plugin-*"]
resolver = "2"

[workspace.dependencies]
bstr = "1.11.1"
# Add the `tracing` or `tracing-detail` features to see more of gitoxide in the logs. Useful to see which programs it invokes.
gix = { git = "https://github.com/GitoxideLabs/gitoxide", rev = "914bf28409e8c319c25967f2bdb6aa71f2255879", default-features = false, features = [
] }
gix-testtools = "0.15.0"
insta = "1.41.1"
git2 = { version = "0.20.0", features = [
    "vendored-openssl",
    "vendored-libgit2",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false }
keyring = { version = "3.6.1", features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "crypto-rust",
] }
anyhow = "1.0.95"
parking_lot = "0.12.3"
futures = "0.3.31"
toml = "0.8.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tempfile = "3.14"

gitbutler-id = { path = "crates/gitbutler-id" }
gitbutler-git = { path = "crates/gitbutler-git" }
gitbutler-watcher = { path = "crates/gitbutler-watcher" }
gitbutler-testsupport = { path = "crates/gitbutler-testsupport" }
gitbutler-cli = { path = "crates/gitbutler-cli" }
gitbutler-branch-actions = { path = "crates/gitbutler-branch-actions" }
gitbutler-sync = { path = "crates/gitbutler-sync" }
gitbutler-oplog = { path = "crates/gitbutler-oplog" }
gitbutler-repo = { path = "crates/gitbutler-repo" }
gitbutler-repo-actions = { path = "crates/gitbutler-repo-actions" }
gitbutler-command-context = { path = "crates/gitbutler-command-context" }
gitbutler-feedback = { path = "crates/gitbutler-feedback" }
gitbutler-config = { path = "crates/gitbutler-config" }
gitbutler-project = { path = "crates/gitbutler-project" }
gitbutler-user = { path = "crates/gitbutler-user" }
gitbutler-branch = { path = "crates/gitbutler-branch" }
gitbutler-reference = { path = "crates/gitbutler-reference" }
gitbutler-error = { path = "crates/gitbutler-error" }
gitbutler-serde = { path = "crates/gitbutler-serde" }
gitbutler-secret = { path = "crates/gitbutler-secret" }
gitbutler-storage = { path = "crates/gitbutler-storage" }
gitbutler-fs = { path = "crates/gitbutler-fs" }
gitbutler-time = { path = "crates/gitbutler-time" }
gitbutler-commit = { path = "crates/gitbutler-commit" }
gitbutler-tagged-string = { path = "crates/gitbutler-tagged-string" }
gitbutler-url = { path = "crates/gitbutler-url" }
gitbutler-diff = { path = "crates/gitbutler-diff" }
gitbutler-operating-modes = { path = "crates/gitbutler-operating-modes" }
gitbutler-edit-mode = { path = "crates/gitbutler-edit-mode" }
gitbutler-cherry-pick = { path = "crates/gitbutler-cherry-pick" }
gitbutler-oxidize = { path = "crates/gitbutler-oxidize" }
gitbutler-stack = { path = "crates/gitbutler-stack" }
gitbutler-forge = { path = "crates/gitbutler-forge" }
gitbutler-hunk-dependency = { path = "crates/gitbutler-hunk-dependency" }
gitbutler-settings = { path = "crates/gitbutler-settings" }
gitbutler-workspace = { path = "crates/gitbutler-workspace" }
but-debugging = { path = "crates/but-debugging" }
but-core = { path = "crates/but-core" }
but-workspace = { path = "crates/but-workspace" }
but-hunk-dependency = { path = "crates/but-hunk-dependency" }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-traffic-lights = { path = "crates/tauri-plugin-traffic-lights" }

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.bench]
codegen-units = 256
lto = false
opt-level = 3
