[workspace]
members = ["crates/gitbutler-*", "crates/but-*", "crates/but"]
resolver = "2"

[workspace.dependencies]
bstr = "1.12.1"
# Add the `tracing` or `tracing-detail` features to see more of gitoxide in the logs. Useful to see which programs it invokes.
gix = { version = "0.74.0", git = "https://github.com/GitoxideLabs/gitoxide", branch = "main", default-features = false, features = [] }
gix-testtools = "0.16.1"
insta = "1.43.2"
git2 = { version = "0.20.0", features = [
    "vendored-openssl",
    "vendored-libgit2",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
anyhow = "1.0.100"
parking_lot = "0.12.4"
futures = "0.3.31"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tempfile = "3.23"
rand = "0.9.2"
notify-rust = "4.11.7"

gitbutler-id = { path = "crates/gitbutler-id" }
gitbutler-git = { path = "crates/gitbutler-git" }
gitbutler-watcher = { path = "crates/gitbutler-watcher" }
gitbutler-filemonitor = { path = "crates/gitbutler-filemonitor" }
gitbutler-testsupport = { path = "crates/gitbutler-testsupport" }
gitbutler-branch-actions = { path = "crates/gitbutler-branch-actions" }
gitbutler-sync = { path = "crates/gitbutler-sync" }
gitbutler-oplog = { path = "crates/gitbutler-oplog" }
gitbutler-repo = { path = "crates/gitbutler-repo" }
gitbutler-repo-actions = { path = "crates/gitbutler-repo-actions" }
gitbutler-command-context = { path = "crates/gitbutler-command-context" }
but-feedback = { path = "crates/but-feedback" }
gitbutler-project = { path = "crates/gitbutler-project" }
gitbutler-user = { path = "crates/gitbutler-user" }
gitbutler-branch = { path = "crates/gitbutler-branch" }
gitbutler-reference = { path = "crates/gitbutler-reference" }
gitbutler-error = { path = "crates/gitbutler-error" }
gitbutler-serde = { path = "crates/gitbutler-serde" }
but-secret = { path = "crates/but-secret" }
gitbutler-storage = { path = "crates/gitbutler-storage" }
gitbutler-fs = { path = "crates/gitbutler-fs" }
gitbutler-time = { path = "crates/gitbutler-time" }
gitbutler-commit = { path = "crates/gitbutler-commit" }
gitbutler-tagged-string = { path = "crates/gitbutler-tagged-string" }
gitbutler-url = { path = "crates/gitbutler-url" }
gitbutler-diff = { path = "crates/gitbutler-diff" }
gitbutler-operating-modes = { path = "crates/gitbutler-operating-modes" }
gitbutler-edit-mode = { path = "crates/gitbutler-edit-mode" }
gitbutler-cherry-pick = { path = "crates/gitbutler-cherry-pick" }
gitbutler-oxidize = { path = "crates/gitbutler-oxidize" }
gitbutler-stack = { path = "crates/gitbutler-stack" }
gitbutler-forge = { path = "crates/gitbutler-forge" }
gitbutler-hunk-dependency = { path = "crates/gitbutler-hunk-dependency" }
but-forge-storage = {path = "crates/but-forge-storage" }
but-settings = { path = "crates/but-settings" }
gitbutler-workspace = { path = "crates/gitbutler-workspace" }
schemars = { version = "1.0.4", default-features = false, features = ["std", "derive"] }
async-openai = { version = "0.30.1", default-features = false, features = ["rustls"] }
but = { path = "crates/but" }
but-testsupport = { path = "crates/but-testsupport" }
but-rebase = { path = "crates/but-rebase" }
but-core = { path = "crates/but-core" }
but-workspace = { path = "crates/but-workspace" }
but-hunk-assignment = { path = "crates/but-hunk-assignment" }
but-hunk-dependency = { path = "crates/but-hunk-dependency" }
but-worktrees = { path = "crates/but-worktrees" }
but-db = { path = "crates/but-db" }
but-path = { path = "crates/but-path" }
but-graph = { path = "crates/but-graph" }
but-rules = { path = "crates/but-rules" }
but-action = { path = "crates/but-action" }
but-bot = { path = "crates/but-bot" }
but-status = { path = "crates/but-status" }
but-tools = { path = "crates/but-tools" }
but-api = { path = "crates/but-api" }
but-api-macros = { path = "crates/but-api-macros" }
but-claude = { path = "crates/but-claude" }
but-cursor = { path = "crates/but-cursor" }
but-broadcaster = { path = "crates/but-broadcaster" }
but-gerrit = { path = "crates/but-gerrit" }
but-cherry-apply = { path = "crates/but-cherry-apply" }
but-github = { path = "crates/but-github" }
git2-hooks = { version = "0.5.0" }
itertools = "0.14.0"
dirs = "6.0.0"
rmcp = { version = "0.8.3", default-features = false, features = ["base64", "server", "macros"] }
serde_json_lenient = "0.2.3"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
md5 = "0.8.0"
bitflags = "2.9.4"
notify = "8.2.0"
snapbox = "0.6.23"
open = "5.3.2"

[profile.release]
# There are no overrides here as we optimise for fast release builds,
# which are used when building locally and when making Nightly builds.
# The Stable release builds override the relevant settings at release time
# to optimise for size.

[profile.bench]
codegen-units = 256
lto = false
opt-level = 3
debug = "line-tables-only"

[profile.dev]
incremental = false
debug = "line-tables-only"

[profile.test]
incremental = false

# Assure that `gix` is always fast so debug builds aren't unnecessarily slow.
[profile.dev.package]
gix = { opt-level = 3 }
gix-object = { opt-level = 3 }
gix-ref = { opt-level = 3 }
gix-pack = { opt-level = 3 }
gix-hash = { opt-level = 3 }
gix-actor = { opt-level = 3 }
gix-config = { opt-level = 3 }
sha1-checked = { opt-level = 3 }
zlib-rs = { opt-level = 3 }
# This one is special as we can run into debug assertions otherwise.
# They have a time, but let's chose the time instead of always being hit by it.
gix-merge = { opt-level = 3, debug-assertions = false }

