[workspace]
members = ["crates/gitbutler-*", "crates/but-*", "crates/but"]
resolver = "2"

[workspace.dependencies]
bstr = "1.11.1"
# Add the `tracing` or `tracing-detail` features to see more of gitoxide in the logs. Useful to see which programs it invokes.
gix = { version = "0.73.0", git = "https://github.com/GitoxideLabs/gitoxide", branch = "main", default-features = false, features = [
] }
gix-testtools = "0.16.1"
insta = "1.43.1"
git2 = { version = "0.20.0", features = [
    "vendored-openssl",
    "vendored-libgit2",
] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.9"
tokio = { version = "1.47.1", default-features = false }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
anyhow = "1.0.98"
parking_lot = "0.12.4"
futures = "0.3.31"
toml = "0.8.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tempfile = "3.14"
rand = "0.9.2"
notify-rust = "4.11.7"

gitbutler-id = { path = "crates/gitbutler-id" }
gitbutler-git = { path = "crates/gitbutler-git" }
gitbutler-watcher = { path = "crates/gitbutler-watcher" }
gitbutler-filemonitor = { path = "crates/gitbutler-filemonitor" }
gitbutler-testsupport = { path = "crates/gitbutler-testsupport" }
gitbutler-cli = { path = "crates/gitbutler-cli" }
gitbutler-branch-actions = { path = "crates/gitbutler-branch-actions" }
gitbutler-sync = { path = "crates/gitbutler-sync" }
gitbutler-oplog = { path = "crates/gitbutler-oplog" }
gitbutler-repo = { path = "crates/gitbutler-repo" }
gitbutler-repo-actions = { path = "crates/gitbutler-repo-actions" }
gitbutler-command-context = { path = "crates/gitbutler-command-context" }
but-feedback = { path = "crates/but-feedback" }
gitbutler-project = { path = "crates/gitbutler-project" }
gitbutler-user = { path = "crates/gitbutler-user" }
gitbutler-branch = { path = "crates/gitbutler-branch" }
gitbutler-reference = { path = "crates/gitbutler-reference" }
gitbutler-error = { path = "crates/gitbutler-error" }
gitbutler-serde = { path = "crates/gitbutler-serde" }
gitbutler-secret = { path = "crates/gitbutler-secret" }
gitbutler-storage = { path = "crates/gitbutler-storage" }
gitbutler-fs = { path = "crates/gitbutler-fs" }
gitbutler-time = { path = "crates/gitbutler-time" }
gitbutler-commit = { path = "crates/gitbutler-commit" }
gitbutler-tagged-string = { path = "crates/gitbutler-tagged-string" }
gitbutler-url = { path = "crates/gitbutler-url" }
gitbutler-diff = { path = "crates/gitbutler-diff" }
gitbutler-operating-modes = { path = "crates/gitbutler-operating-modes" }
gitbutler-edit-mode = { path = "crates/gitbutler-edit-mode" }
gitbutler-cherry-pick = { path = "crates/gitbutler-cherry-pick" }
gitbutler-oxidize = { path = "crates/gitbutler-oxidize" }
gitbutler-stack = { path = "crates/gitbutler-stack" }
gitbutler-forge = { path = "crates/gitbutler-forge" }
gitbutler-hunk-dependency = { path = "crates/gitbutler-hunk-dependency" }
but-settings = { path = "crates/but-settings" }
gitbutler-workspace = { path = "crates/gitbutler-workspace" }
but = { path = "crates/but" }
but-server = { path = "crates/but-server" }
but-testsupport = { path = "crates/but-testsupport" }
but-rebase = { path = "crates/but-rebase" }
but-core = { path = "crates/but-core" }
but-workspace = { path = "crates/but-workspace" }
but-hunk-assignment = { path = "crates/but-hunk-assignment" }
but-hunk-dependency = { path = "crates/but-hunk-dependency" }
but-db = { path = "crates/but-db" }
but-path = { path = "crates/but-path" }
but-graph = { path = "crates/but-graph" }
but-rules = { path = "crates/but-rules" }
but-action = { path = "crates/but-action" }
but-bot = { path = "crates/but-bot" }
but-status = { path = "crates/but-status" }
but-tools = { path = "crates/but-tools" }
but-api = { path = "crates/but-api" }
but-claude = { path = "crates/but-claude" }
but-broadcaster = { path = "crates/but-broadcaster" }
git2-hooks = { version = "0.5.0" }
itertools = "0.14.0"
dirs = "6.0.0"
# TODO: needs update, but breaks from v0.2
rmcp = { version = "0.1.5" }

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true      # Enable debug symbols, for profiling

[profile.bench]
codegen-units = 256
lto = false
opt-level = 3

[profile.dev]
incremental = false

[profile.test]
incremental = false
