[package]
name = "gitbutler-diff"
version = "0.0.0"
edition = "2021"

[features]
default = ["git2", "mmap", "serde"]
git2 = ["dep:git2"]
mmap = ["dep:mmap-rs"]
serde = ["dep:serde"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
mmap-rs = { version = "0.6.0", optional = true }

[dev-dependencies]
paste = "1.0.14"
