[package]
name = "gitbutler-git"
version = "0.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gitbutler-git-askpass"
path = "src/cli/bin/askpass.rs"

[[bin]]
name = "gitbutler-git-setsid"
path = "src/cli/bin/setsid.rs"

[features]
default = ["serde", "tokio"]
serde = ["dep:serde"]
tokio = ["dep:tokio"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["process", "rt", "process", "time", "io-util", "net", "fs", "sync"]}
rand = "0.8.5"
futures = "0.3.30"
sysinfo = "0.30.5"

[target."cfg(unix)".dependencies]
nix = { version = "0.27.1", features = ["process", "socket", "user"] }
