[package]
name = "git-butler-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "path-all", "protocol-asset", "shell-open", "system-tray", "window-start-dragging"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev", features = ["colored"]  }
log = "0.4.17"
notify = "5.1.0"
serde_json = {version = "1.0.92", features = [ "std", "arbitrary_precision" ] }
uuid = "1.3.2"
git2 = { version = "0.16.1", features = ["vendored-openssl", "vendored-libgit2"] }
filetime = "0.2.19"
sha2 = "0.10.6"
sentry = {version = "0.31.0", features = ["backtrace", "contexts", "panic", "transport", "anyhow", "debug-images", "reqwest", "native-tls" ] }
walkdir = "2.3.2"
anyhow = "1.0.69"
tempfile = "3.3.0"
reqwest = "0.11.14"
md5 = "0.7.0"
urlencoding = "2.1.2"
thiserror = "1.0.38"
tantivy = "0.19.2"
similar = { version = "2.2.1", features = ["unicode"] }
fslock = "0.2.1"
tokio = { version = "1.26.0", features = ["full", "sync"] }
tokio-tungstenite = "0.18.0"
portable-pty = { version = "0.8.0", features = [ "serde_support" ] }
bytes = "1.1.0"
futures = "0.3"
futures-util = "0.3.8"
timed = "0.2.1"
serde-jsonlines = "0.4.0"
crossbeam-channel = "0.5.8"
scopeguard = "1.1.0"
sentry-anyhow = "0.31.0"
sentry-rust-minidump = "0.5.1"
sentry-debug-images = "0.31.0"
lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
