[package]
name = "git-butler-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "dialog-open", "fs-read-file", "path-all", "protocol-asset", "shell-open", "system-tray", "window-start-dragging"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"]  }
log = "0.4.17"
notify = "5.1.0"
serde_json = {version = "1.0.92", features = [ "std", "arbitrary_precision" ] }
uuid = "1.4.1"
git2 = { version = "0.17.2", features = ["vendored-openssl", "vendored-libgit2"] }
filetime = "0.2.19"
sha2 = "0.10.6"
sentry = {version = "0.31.0", features = ["backtrace", "contexts", "panic", "transport", "anyhow", "debug-images", "reqwest", "native-tls" ] }
walkdir = "2.3.2"
anyhow = "1.0.71"
tempfile = "3.3.0"
reqwest = "0.11.14"
md5 = "0.7.0"
urlencoding = "2.1.2"
thiserror = "1.0.38"
tantivy = "0.20.2"
similar = { version = "2.2.1", features = ["unicode"] }
fslock = "0.2.1"
tokio = { version = "1.28.0", features = ["full", "sync"] }
tokio-tungstenite = "0.19.0"
portable-pty = { version = "0.8.0", features = [ "serde_support" ] }
bytes = "1.1.0"
futures = "0.3"
timed = "0.2.1"
serde-jsonlines = "0.4.0"
scopeguard = "1.1.0"
sentry-anyhow = "0.31.0"
sentry-rust-minidump = "0.5.1"
sentry-debug-images = "0.31.5"
zip = "0.6.5"
rusqlite = { version = "0.29.0", features = [ "bundled", "blob" ] }
refinery = { version = "0.8", features = [ "rusqlite" ] }
sha1 = "0.10.5"
tokio-util = "0.7.8"
diffy = "0.3.0"
url = "2.4.0"
chrono = "0.4.26"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature enables devtools
devtools = ["tauri/devtools"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
