[package]
name = "git-butler-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "dialog-open", "fs-read-file", "path-all", "protocol-asset", "shell-open", "system-tray", "window-start-dragging"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
notify = { version = "6.0.1" }
serde_json = {version = "1.0.104", features = [ "std", "arbitrary_precision" ] }
uuid = "1.4.1"
git2 = { version = "0.17.2", features = ["vendored-openssl", "vendored-libgit2"] }
filetime = "0.2.19"
sha2 = "0.10.6"
sentry = {version = "0.31.5", features = ["backtrace", "contexts", "panic", "transport", "anyhow", "debug-images", "reqwest", "native-tls" ] }
walkdir = "2.3.2"
anyhow = "1.0.72"
tempfile = "3.7.1"
reqwest = "0.11.14"
md5 = "0.7.0"
urlencoding = "2.1.3"
thiserror = "1.0.44"
tantivy = "0.20.2"
similar = { version = "2.2.1", features = ["unicode"] }
tokio = { version = "1.29.1", features = [ "full", "sync", "tracing" ] }
tokio-tungstenite = "0.19.0"
portable-pty = { version = "0.8.0", features = [ "serde_support" ] }
bytes = "1.1.0"
futures = "0.3"
serde-jsonlines = "0.4.0"
sentry-anyhow = "0.31.0"
sentry-rust-minidump = "0.6.4"
sentry-debug-images = "0.31.5"
zip = "0.6.5"
rusqlite = { version = "0.29.0", features = [ "bundled", "blob" ] }
refinery = { version = "0.8", features = [ "rusqlite" ] }
sha1 = "0.10.5"
tokio-util = "0.7.8"
diffy = "0.3.0"
url = "2.4.0"
ssh-key = { version = "0.5.1", features = [ "alloc", "ed25519" ] }
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
console-subscriber = "0.1.10"
rustix = "0.38.8"
backoff = "0.4.0"
byteorder = "1.4.3"
num_cpus = "1.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature enables devtools
devtools = ["tauri/devtools"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# https://tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
