[package]
name = "but-acp"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
rust-version.workspace = true
description = "Agent Client Protocol integration"

[lib]
doctest = false

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
but-schemars.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "process", "time"] }
reqwest.workspace = true
tracing.workspace = true

[lints]
workspace = true
