[package]
name = "but-action"
version = "0.0.0"
edition = "2024"
authors = ["GitButler <gitbutler@gitbutler.com>"]
publish = false

[lib]
doctest = false
test = false

[dependencies]
serde = { workspace = true, features = ["std"] }
serde-error = "0.1.3"
async-openai = "0.29.3"
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }
schemars = "0.9.0"
serde_json = "1.0.145"
anyhow = "1.0.100"
chrono = "0.4.42"
itertools = "0.14.0"
secrecy = "0.10.3"
uuid = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
gix.workspace = true
rmcp.workspace = true
futures = "0.3.31"
gitbutler-command-context.workspace = true
gitbutler-stack.workspace = true
gitbutler-operating-modes.workspace = true
but-settings.workspace = true
gitbutler-branch-actions.workspace = true
gitbutler-branch.workspace = true
gitbutler-oplog.workspace = true
gitbutler-oxidize.workspace = true
gitbutler-secret.workspace = true
gitbutler-project.workspace = true
gitbutler-reference.workspace = true
gitbutler-serde.workspace = true
tracing.workspace = true
but-db.workspace = true
but-core.workspace = true
but-graph.workspace = true
but-workspace.workspace = true
but-hunk-assignment.workspace = true
but-hunk-dependency.workspace = true
but-tools.workspace = true
